[wheel]
universal = 1

[metadata]
name = fast_forward
author = Fabian Grunewald
author_email = f.grunewald@rug.nl
description_file = README.md
description-content-type = text/markdown; charset=UTF-8
#url = https://github.com/marrink-lab/polyply_1.0
license = Apache 2.0
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords = coarse grained molecular dynamics

[options]
packages = find:
setup-requires =
    setuptools >= 30.3.0
    pbr
install-requires =  # ?? requires-dist?
    pbr
    # this is to be consistent with numba
    numpy
    vermouth >= 0.5.0
    numba
    MDAnalysis
    cgsmiles
zip-safe = False
